tests/a/tests/integrity/fail/struct/struct.2.stderr
error: expected {root}{root} struct {number:{*}{*},string:{root}{root}}, found {root}{root} struct {number:{*}{*},string:{root}{c,root}}
  --> tests/integrity/fail/struct/struct.2.rs:20:13
   |
20 |       let b = BarBar {
   |  _____________^
21 | |         number: b::value(),
22 | |         string
23 | |     };
   | |_____^
